[A11y]Fix some minor text contrast issues. (#8164)
* Darken link colour with darker background.
* Fix contrast on reset for advanced search

--- a/src/Bootstrap/less/mixins/background-variant.less
+++ b/src/Bootstrap/less/mixins/background-variant.less
@@ -2,6 +2,10 @@
 
 .bg-variant(@color) {
   background-color: @color;
+  & a {
+    color: darken(@link-color, 10%);
+  }
+
   a&:hover,
   a&:focus {
     background-color: darken(@color, 10%);
