--- a/src/Bootstrap/less/theme/page-list-packages.less
+++ b/src/Bootstrap/less/theme/page-list-packages.less
@@ -83,6 +83,10 @@
       margin-left: 10px;
       margin-right: 10px;
     }
+
+    #reset-advanced-search {
+      color: darken(@link-color, 10%);
+    }
   }
 
   @media (min-width: @screen-sm) {
